<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:background="@drawable/textlines_workout_details">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/workout_details"
                android:textAlignment="center"
                android:textSize="28sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="0.5"
            android:background="@drawable/textlines_workout_details">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"/>

            <TextView
                android:id="@+id/average_text_view_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/default_rate"
                android:textAlignment="center"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_marginRight="14dp"
                android:layout_marginLeft="14dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:text="@string/units_time_rate" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:background="@drawable/textlines_workout_details">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:background="@drawable/textlines_workout_details">

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:text="@string/max" />

                <TextView
                    android:id="@+id/max_text_view_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/default_rate"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"/>

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:text="@string/units_time_rate" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:background="@drawable/textlines_workout_details">

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:text="@string/min"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/min_text_view_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/default_rate"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"/>

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:text="@string/units_time_rate"
                    android:textAlignment="center" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/bar_chart_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_margin="10dp"/>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/line_chart_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_margin="10dp"/>

    </LinearLayout>

</LinearLayout>

